SAE-501 - Fix summary tag on iOS

--- a/developpement-front-s5/sae-501/code/src/styles/back-end/index.css
+++ b/developpement-front-s5/sae-501/code/src/styles/back-end/index.css
@@ -95,7 +95,7 @@
 
 dialog {
     &[open] {
-        animation: slide-in-up 0.35s cubic-bezier(0.25, 0, 0.3, 1) both;
+        animation: slide-in-up 0.1s cubic-bezier(0.25, 0, 0.3, 1) both;
     }
 }
 
@@ -122,4 +122,8 @@ dialog {
     @container main (width <= theme('containers.3xl')) {
         grid-column: auto / auto;
     }
+}
+
+details summary::-webkit-details-marker {
+    display: none;
 }
